# ckanext-api-tracking

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  babel.cfg  conftest.py  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test-ckan-2.10.yml  test-ckan-2.11.yml  test.yml
DOCS/: README_i18n_ckanext_api_tracking(translate_english_version).md  translate.en.md  translate.es.md
DOCS/imgs/: tracking_type.md
ckanext/api_tracking/: interfaces.py  middleware.py  plugin.py  utils.py
ckanext/api_tracking/actions/: base.py  queries.py
ckanext/api_tracking/assets/: script.js  webassets.yml
ckanext/api_tracking/auth/: base.py  csv.py  queries.py
ckanext/api_tracking/blueprints/: __init__.py  csv.py  dashboard.py  tracking.py
ckanext/api_tracking/dashboard/: stats.py  stats_api.py  users.py
ckanext/api_tracking/dashboard/sql/: api-token-usage-aggregated-by-dataset.sql  api-token-usage-aggregated-by-token.sql  latest-api-token-usage.sql  viewed-datasets-unique.sql  viewed-datasets.sql
ckanext/api_tracking/i18n/: ckanext-api-tracking.pot
ckanext/api_tracking/i18n/ES/LC_MESSAGES/: ckanext-api-tracking.mo  ckanext-api-tracking.po
ckanext/api_tracking/i18n/es/LC_MESSAGES/: ckanext-api-tracking.mo  ckanext-api-tracking.po
ckanext/api_tracking/migration/api_tracking/versions/: 001_95aed1f25344_init_extension_models.py
ckanext/api_tracking/models/: __init__.py  tracking.py  url.py
ckanext/api_tracking/queries/: __init__.py  api.py  users.py
ckanext/api_tracking/queries/data/: __init__.py  all.py  dataset.py  resource.py  token.py  users.py
ckanext/api_tracking/templates/admin/: base.html
ckanext/api_tracking/templates/dashboard/: api-token-usage-aggregated.html  base.html  dataset-unique-views.html  dataset-views.html  largest-groups.html  latest-api-token-usage.html  most-create.html  resource-downloads.html  total-datasets.html  users-active-metrics.html
ckanext/api_tracking/tests/: factories.py  fixtures.py  test_ckanurl.py  test_ckanurl_integration.py  test_csv.py  test_csv_dataset.py  test_csv_resource.py  test_dashboard_tab.py  test_dashboard_tabs.py  test_middleware.py  test_plugin.py  test_tracking_basic.py  test_tracking_blueprint.py  test_tracking_session.py  test_users_metrics.py
ckanext/api_tracking/tests/sample/: README.md
ckanext/tracking/: interfaces.py  middleware.py  plugin.py
ckanext/tracking/actions/: queries.py
ckanext/tracking/auth/: csv.py  queries.py
ckanext/tracking/blueprints/: __init__.py  csv.py  dashboard.py
ckanext/tracking/dashboard/: __init__.py  resource_download_counter.py
ckanext/tracking/dashboard/sql/: downloaded-resources.sql
ckanext/tracking/migration/tracking/versions/: 001_95aed1f25344_init_extension_models.py
ckanext/tracking/models/: __init__.py
ckanext/tracking/queries/: api.py
ckanext/tracking/queries/data/: all.py  token.py
ckanext/tracking/templates/dashboard/: api-token-usage-aggregated.html  base.html  dataset-unique-views.html  dataset-views.html  edited-datasets.html  latest-api-token-usage.html
ckanext/tracking/tests/: fixtures.py  test_csv.py  test_dashboard_tabs.py  test_middleware.py  test_tracking_basic.py
