[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-api-tracking"
# see tool.setuptools.dynamic in this file
dynamic = ["version"]
description = "CKAN extension to track users activity"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"

authors = [
    { name = "Norwegian Refugee Council (NRC)", email = "nrc@nrc.no" },
    { name = "Open Knowledge Foundation", email = "info@okfn.org" },
]
maintainers = [
  { name = "Open Knowledge Foundation", email = "info@okfn.org" },
]

keywords = ["CKAN", "Tracking", "Activity", "API", "token"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/NorwegianRefugeeCouncil/ckanext-api-tracking"
"Issues" = "https://github.com/NorwegianRefugeeCouncil/ckanext-api-tracking/issues"

# [project.dependencies]
# Dependencies should be listed in requirements.txt as per CKAN extension best practices
# Example:
# requests = "*"
# flask = "*"

[project.optional-dependencies]
# Optional dependencies can be listed here
# dev = [
#     "pytest",
#     "flake8",
# ]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["contrib", "docs", "tests*"]
namespaces = true

[tool.setuptools.package-data]
include = ["*"]

[tool.setuptools.dynamic]
version = {attr = "ckanext.api_tracking.__VERSION__"}

[tool.setuptools.data-files]
# Data files can be listed here
# Example:
# "my_data" = ["path/to/data/file"]

[project.scripts]
# Entry points for console scripts can be added here
# Example:
# your_command = "your_module:main"

[project.entry-points."ckan.plugins"]
api_tracking = "ckanext.api_tracking.plugin:TrackingPlugin"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[tool.babel]
[tool.babel.extract_messages]
keywords = ["translate", "isPlural"]
add_comments = "TRANSLATORS:"
output_file = "ckanext/api_tracking/i18n/ckanext-api-tracking.pot"
width = 80

[tool.babel.init_catalog]
domain = "ckanext-api-tracking"
input_file = "ckanext/api_tracking/i18n/ckanext-api-tracking.pot"
output_dir = "ckanext/api_tracking/i18n"

[tool.babel.update_catalog]
domain = "ckanext-api-tracking"
input_file = "ckanext/api_tracking/i18n/ckanext-api-tracking.pot"
output_dir = "ckanext/api_tracking/i18n"
previous = true

[tool.babel.compile_catalog]
domain = "ckanext-api-tracking"
directory = "ckanext/api_tracking/i18n"
statistics = true

[tool.babel.extractors.ckanext]
"**.py" = "python"
"**.js" = "javascript"
"**/templates/**.html" = "ckan"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning"
]
addopts = "--ckan-ini test.ini"
